tests/22-throw-catch.out
handling exception
Error: "throw from catch"
#(tests/22-throw-catch.p:5)       throw "throwing an error string"
                          |.......^
#(tests/22-throw-catch.p:3) def rec(num) {
                          |.^
#(tests/22-throw-catch.p:7)     return rec(num - 1)
                          |............^
#(tests/22-throw-catch.p:3) def rec(num) {
                          |.^
#(tests/22-throw-catch.p:7)     return rec(num - 1)
                          |............^
#(tests/22-throw-catch.p:3) def rec(num) {
                          |.^
#(tests/22-throw-catch.p:7)     return rec(num - 1)
                          |............^
#(tests/22-throw-catch.p:3) def rec(num) {
                          |.^
#(tests/22-throw-catch.p:7)     return rec(num - 1)
                          |............^
#(tests/22-throw-catch.p:3) def rec(num) {
                          |.^
#(tests/22-throw-catch.p:7)     return rec(num - 1)
                          |............^
#(tests/22-throw-catch.p:3) def rec(num) {
                          |.^
#(tests/22-throw-catch.p:11)     rec(5)
                           |.....^
#(tests/22-throw-catch.p:14)   throw "throw from catch"
                           |...^
